--- a/whiteboard/Controllers/WBLoginViewController.xib
+++ b/whiteboard/Controllers/WBLoginViewController.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" image="4A678B54-04B7-4F54-92BD-942BEDDBE355" translatesAutoresizingMaskIntoConstraints="NO" id="es9-cf-eju">
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" image="0B4E0684-4B37-4E88-8D05-3B53C2155B2D" translatesAutoresizingMaskIntoConstraints="NO" id="es9-cf-eju">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask"/>
                 </imageView>
@@ -61,6 +61,7 @@
                         <constraint firstAttribute="width" constant="140" id="qtO-LR-L6T"/>
                     </constraints>
                     <state key="normal" title="Log In">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -71,6 +72,7 @@
                     <rect key="frame" x="160" y="345" width="140" height="43"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="Register">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -96,7 +98,7 @@
         </view>
     </objects>
     <resources>
-        <image name="4A678B54-04B7-4F54-92BD-942BEDDBE355" width="320" height="548">
+        <image name="0B4E0684-4B37-4E88-8D05-3B53C2155B2D" width="320" height="548">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
